H2 font size adjustment and fixing mustache image cropping

--- a/css/style.css
+++ b/css/style.css
@@ -559,7 +559,7 @@ h1 {
 
 h2 {
 	color:#403C39;
-	font:bold 100% 'AsapRegular','helvetica neue',helvetica,arial,sans-serif;
+	font:normal 105% 'AsapRegular','helvetica neue',helvetica,arial,sans-serif;
 	text-align:center;
 	text-shadow:1px 1px #D8D8D8;
 }
